<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:backgroundTint="#40FBC02D"
    android:backgroundTintMode="src_over"
    tools:context=".Edit">

  <androidx.cardview.widget.CardView
      android:id="@+id/cardTitle"
      android:layout_width="320dp"
      android:layout_height="51dp"
      android:layout_marginTop="44dp"
      app:cardBackgroundColor="#FFFDFD"
      app:cardCornerRadius="15dp"
      app:cardElevation="25dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.494"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/nextsunday"
        android:text="@string/editTitle"
        android:textSize="34sp" />
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:id="@+id/recordView"
      android:layout_width="100dp"
      android:layout_height="35dp"
      android:layout_marginTop="40dp"
      app:cardCornerRadius="15dp"
      app:cardElevation="25dp"
      app:layout_constraintEnd_toEndOf="@+id/cardTitle"
      app:layout_constraintHorizontal_bias="0.494"
      app:layout_constraintStart_toStartOf="@+id/cardTitle"
      app:layout_constraintTop_toBottomOf="@+id/cardTitle">

    <TextView
        android:id="@+id/record_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/nextsunday"
        android:text="TextView"
        android:textSize="20sp" />
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:id="@+id/editinfoView"
      android:layout_width="320dp"
      android:layout_height="220dp"
      android:layout_marginTop="32dp"
      app:cardCornerRadius="15dp"
      app:cardElevation="25dp"
      app:layout_constraintEnd_toEndOf="@+id/recordView"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintStart_toStartOf="@+id/recordView"
      app:layout_constraintTop_toBottomOf="@+id/recordView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <Space
          android:layout_width="match_parent"
          android:layout_height="15dp" />

      <EditText
          android:id="@+id/editProd_id"
          android:layout_width="match_parent"
          android:layout_height="74dp"
          android:ems="10"
          android:hint="@string/productHint"
          android:inputType="textPersonName" />

      <Space
          android:layout_width="match_parent"
          android:layout_height="45dp" />

      <EditText
          android:id="@+id/editPrice_id"
          android:layout_width="match_parent"
          android:layout_height="74dp"
          android:ems="10"
          android:hint="@string/priceHint"
          android:inputType="textPersonName" />
    </LinearLayout>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:id="@+id/btnEditView"
      android:layout_width="165dp"
      android:layout_height="100dp"
      android:layout_marginTop="20dp"
      app:cardCornerRadius="15dp"
      app:cardElevation="25dp"
      app:layout_constraintEnd_toEndOf="@+id/editinfoView"
      app:layout_constraintHorizontal_bias="0.503"
      app:layout_constraintStart_toStartOf="@+id/editinfoView"
      app:layout_constraintTop_toBottomOf="@+id/editinfoView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <Button
          android:id="@+id/btn_edit_id"
          android:layout_width="150dp"
          android:layout_height="50dp"
          android:layout_gravity="center"
          android:backgroundTint="#388E3C"
          android:fontFamily="@font/nextsunday"
          android:text="@string/editBtn"
          android:textSize="20sp" />

      <Button
          android:id="@+id/btn_delete_id"
          android:layout_width="150dp"
          android:layout_height="50dp"
          android:layout_gravity="center"
          android:backgroundTint="#D32F2F"
          android:fontFamily="@font/nextsunday"
          android:text="@string/deleteBtn"
          android:textSize="20sp" />
    </LinearLayout>

  </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>